openapi dto update
